# code_bucket

./: README.md
C_Generic/: main.c
agecanonix/: dune-project  test.sh
asterix/: asterix.opam  dune-project  shell.nix  test1.json
build_with_jsc/: Cargo.toml  README.md  main.js
build_with_jsc/src/: main.rs
c_classes/: chataigne.toml  main.c
c_ownerships/: a.out  main.c
c_redux/: .gitignore  Makefile  main.c  mv_tst.c  priv_reagir.h  reduc  reduc.c  reduc.h  static_states.c
c_rusty_library/: Cargo.toml
code_workflows/: curryfication.c  mini_optional.c  strange_jump.c  trait_specification.cc
cv_html/: cv.json  index.html
diffie_hellman_tool/: .gitignore  Cargo.toml
diffie_hellman_tool/src/: main.rs
diffie_hellman_tool/tests/: run.sh
experimentations/: wrong_expectation.cc
explore_mutex_and_atomic/: Makefile  a.c  anticipated_signal.c  b.c  c.c  cond_var.c  single_thread_concurrency.c  spin_lock.c
extending_lifetime/: Cargo.toml
gpio_sim/: Cargo.toml  Makefile
graphs/: dfs_post_compute_with_stack.rs
hashmap_wasm/: index.js  mine.wasm  mine.wat
jni-sample/: settings.gradle.kts
level_gen/: Cargo.toml
makefiles/: read_env.mk  redef_var.mk  use_args.mk
metaprogramming/: a.h  chataigne.toml  lib.h  main.cpp  trait.h
my_result/: README.md
non_blocking_queue/: .gitignore  Cargo.toml  Makefile  mackael_scott_queue.c  shell.nix  tentative.c  testing.c  use_futex.c
operation_propagation/: README.md  constants.js  github_preview.html  graphical.js  index.html  (+3 more)
threshold_crypto_tool/: Cargo.toml
threshold_crypto_tool/src/: main.rs
(+109 files in other folders)
