[package]
name = "diffie_hellman_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpc-http-server = "18.0.0"
maybe_static = "0.1.3"
rand = "0.8.5"
serde = { version = "1.0.215", features = [ "derive" ] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = [ "full" ] }
tcp_jsonrpc = { path = "../tcp_jsonrpc" }
base64 = "0.22.1"
