[package]
name = "threshold_crypto_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
threshold_crypto = "0.4.0"
tcp_jsonrpc = { path = "../tcp_jsonrpc" }
serde = { version = "1.0.215", features = [ "derive" ] }
serde_json = "1.0.133"
maybe_static = "0.1.3"
rand = "0.7.3"
